Ambition & Avarice: v1.00 fix minor layout bug for chrome

--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -277,7 +277,7 @@ input.sheet-tab3 + span::before
 div.sheet-pg1 {
   display: grid;
   grid-gap: 1px;
-  grid-template-columns: 8fr 2fr 6fr 12fr 4fr 12fr;
+  grid-template-columns: 7fr 2fr 8fr 12fr 4fr 12fr;
   grid-template-rows: 4fr 8fr 8fr 5fr 3fr 5fr;
   grid-template-areas:"name      name     name     name  logo  logo " 
                       "attrs     attrs    hp-ac    hp-ac hp-ac hp-ac"
